--- a/packages/server/Makefile
+++ b/packages/server/Makefile
@@ -17,8 +17,13 @@ build:
 ui:
 	cd ui && pnpm serve-static
 
+ui-server:
+	cd ui && pnpm start
+
 serve:
 	purebackend.exe
 
 # TO BE USED AS `make -j deploy` to run parallel tasks
 deploy: serve ui
+
+deploy-server: serve ui-server
