--- a/packages/sdk/pyproject.toml
+++ b/packages/sdk/pyproject.toml
@@ -37,6 +37,7 @@ joblib = "^1.2.0"
 fastapi = "^0.88.0"
 uvicorn = "^0.20.0"
 docker = "^6.0.1"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.19.2"
