--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -2,8 +2,12 @@ name: Makefile CI
 
 on:
   push:
+    paths:
+        - packages/server/**
     branches: [ "main" ]
   pull_request:
+    paths:
+        - packages/server/**
     branches: [ "main" ]
 
 jobs:
@@ -13,9 +17,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: configure
-      run: ./configure
     
     - name: Setup Go environment
       uses: actions/setup-go@v3.5.0
