Remove Org Member API & dockerfile args

--- a/packages/purebackend/Dockerfile
+++ b/packages/purebackend/Dockerfile
@@ -20,6 +20,30 @@ RUN CGO_ENABLED=0 go test -v
 # Build the Go app
 RUN go build -o ./out/purebackend ./examples/prod/main.go
 
+ARG PORT
+ARG HOST_URL
+ARG SCHEME
+ARG DATABASE
+ARG DATABASE_URL
+ARG CGO_ENABLED
+ARG PURE_ADMIN_AUTH_TOKEN_SECRET
+ARG ADMIN_UUID
+ARG ADMIN_EMAIL
+ARG ADMIN_PASSWORD
+ARG ADMIN_HANDLE
+ARG ADMIN_ORG_HANDLE
+ARG ADMIN_ORG_NAME
+ARG PURE_R2_ACCOUNT_ID
+ARG PURE_R2_BUCKET
+ARG PURE_R2_ENDPOINT
+ARG PURE_R2_ACCESS_KEY
+ARG PURE_R2_SECRET
+ARG PURE_S3_BUCKET
+ARG PURE_S3_REGION
+ARG PURE_S3_ENDPOINT
+ARG PURE_S3_ACCESS_KEY
+ARG PURE_S3_SECRET
+
 # Start fresh from a smaller image
 FROM alpine:3.9 
 RUN apk add ca-certificates
