--- a/packages/purebackend/Dockerfile
+++ b/packages/purebackend/Dockerfile
@@ -43,6 +43,14 @@ ARG PURE_S3_REGION
 ARG PURE_S3_ENDPOINT
 ARG PURE_S3_ACCESS_KEY
 ARG PURE_S3_SECRET
+ARG PURE_MAIL_HOST
+ARG PURE_MAIL_PORT
+ARG PURE_MAIL_USER
+ARG PURE_MAIL_PASS
+ARG PURE_SEARCH_HOST
+ARG PURE_SEARCH_MASTER_KEY
+ARG PURE_SEARCH_ADMIN_API_KEY
+ARG PURE_SEARCH_API_KEY
 
 # Start fresh from a smaller image
 FROM alpine:3.9 
