--- a/packages/sdk/pyproject.toml
+++ b/packages/sdk/pyproject.toml
@@ -38,6 +38,8 @@ fastapi = "^0.88.0"
 uvicorn = "^0.20.0"
 docker = "^6.0.1"
 python-multipart = "^0.0.5"
+nest-asyncio = "^1.5.6"
+pyngrok = "^5.2.1"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.19.2"
