added automated ml tools

--- a/packages/pureml_frontend/package.json
+++ b/packages/pureml_frontend/package.json
@@ -15,18 +15,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
+    "@notionhq/client": "^2.2.3",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.0.2",
+    "@remix-run/cloudflare": "^1.14.3",
+    "@remix-run/cloudflare-pages": "^1.14.3",
     "@remix-run/node": "*",
     "@remix-run/react": "*",
     "@remix-run/serve": "*",
     "@remix-run/server-runtime": "^1.10.0",
     "@remix-run/vercel": "^1.11.0",
-    "@remix-run/cloudflare": "^1.14.3",
-    "@remix-run/cloudflare-pages": "^1.14.3",
     "@tanstack/react-table": "^8.7.9",
     "@types/react-calendar-heatmap": "^1.6.3",
     "@vercel/analytics": "^0.1.10",
