--- a/packages/pureml_frontend/package.json
+++ b/packages/pureml_frontend/package.json
@@ -33,7 +33,6 @@
     "@vercel/analytics": "^0.1.10",
     "@vercel/node": "^1.8.3 || ^2.4.0",
     "airtable": "^0.11.6",
-    "autoprefixer": "^10.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "csstype": "^3.0.10",
@@ -43,7 +42,6 @@
     "lucide-react": "^0.105.0",
     "marked": "^4.2.12",
     "node-fetch": "2.6.1",
-    "postcss": ">=8.3.3 <9.0.0",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
@@ -70,10 +68,12 @@
     "@types/marked": "^4.0.8",
     "@types/react": "17.0.0",
     "@types/react-dom": "^18.0.8",
+    "autoprefixer": "^10.4.14",
     "concurrently": "^7.6.0",
     "eslint": "^8.27.0",
+    "postcss": "^8.4.21",
     "prettier": "2.8.2",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.8.4",
     "wrangler": "^2.2.1"
   },
