--- a/packages/pureml_frontend/package.json
+++ b/packages/pureml_frontend/package.json
@@ -41,7 +41,8 @@
     "isbot": "^3.6.5",
     "lucide-react": "^0.105.0",
     "marked": "^4.2.12",
-    "node-fetch": "2.6.1",
+    "node-fetch": "2.6.7",
+    "postcss": ">=8.3.3 <9.0.0",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
