--- a/packages/pureml_docker/docker-compose.yml
+++ b/packages/pureml_docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       - NEXT_PUBLIC_BACKEND_URL=http://backend:8080/api/
       - NEXT_PUBLIC_AIRTABLE_API_KEY={YOUR_AIRTABLE_API_KEY}
-    ports:.
+    ports:
       - 3000:3000
     links:
       - backend
