--- a/packages/pureml_frontend/Dockerfile
+++ b/packages/pureml_frontend/Dockerfile
@@ -11,7 +11,7 @@ RUN npm run build
 
 # Set environment variables
 # ENV NODE_ENV=production
-ARG NEXT_PUBLIC_BACKEND_URL
+ENV NEXT_PUBLIC_BACKEND_URL=http://localhost:8080/api/
 ARG NEXT_PUBLIC_AIRTABLE_API_KEY
 ARG GA_TRACKING_ID
 
