--- a/packages/sdk/pyproject.toml
+++ b/packages/sdk/pyproject.toml
@@ -40,6 +40,7 @@ docker = "^6.0.1"
 python-multipart = "^0.0.5"
 nest-asyncio = "^1.5.6"
 pyngrok = "^5.2.1"
+ipapi = "^1.0.4"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.19.2"
